--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
-  camera: ^0.10.5
+  camera: ^0.10.5+2
   permission_handler: ^10.2.0
+  googleapis: ^11.1.0
+  path_provider: ^2.0.15
+  path: ^1.8.3
+  image_picker: ^1.0.0
+  dio: ^5.2.1+1
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.2
+  provider: ^6.0.5
+  firebase_auth: ^4.6.3
+  google_sign_in: ^6.1.4
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
