--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,8 +76,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/logo/
+    - images/logo/logo-color.png
     - images/illustrations/
     - images/illustrations/no_photo.jpg
+    - images/illustrations/login.jpg
+    - images/google.png
 #     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
